--- a/01_tutorial/01_Julia_calculation.ipynb
+++ b/01_tutorial/01_Julia_calculation.ipynb
@@ -104,7 +104,14 @@
      "output_type": "error",
      "traceback": [
       "syntax: unexpected \"else\"",
-      ""
+      "",
+      "Stacktrace:",
+      " [1] top-level scope",
+      "   @ In[4]:1",
+      " [2] eval",
+      "   @ .\\boot.jl:360 [inlined]",
+      " [3] include_string(mapexpr::typeof(REPL.softscope), mod::Module, code::String, filename::String)",
+      "   @ Base .\\loading.jl:1094"
      ]
     }
    ],
@@ -123,7 +130,14 @@
      "output_type": "error",
      "traceback": [
       "syntax: unexpected \"=\"",
-      ""
+      "",
+      "Stacktrace:",
+      " [1] top-level scope",
+      "   @ In[5]:1",
+      " [2] eval",
+      "   @ .\\boot.jl:360 [inlined]",
+      " [3] include_string(mapexpr::typeof(REPL.softscope), mod::Module, code::String, filename::String)",
+      "   @ Base .\\loading.jl:1094"
      ]
     }
    ],
@@ -137,14 +151,19 @@
    "metadata": {},
    "outputs": [
     {
-     "ename": "ErrorException",
+     "ename": "LoadError",
      "evalue": "cannot assign a value to variable Base.+ from module Main",
      "output_type": "error",
      "traceback": [
       "cannot assign a value to variable Base.+ from module Main",
       "",
       "Stacktrace:",
-      " [1] top-level scope at In[6]:1"
+      " [1] top-level scope",
+      "   @ In[6]:1",
+      " [2] eval",
+      "   @ .\\boot.jl:360 [inlined]",
+      " [3] include_string(mapexpr::typeof(REPL.softscope), mod::Module, code::String, filename::String)",
+      "   @ Base .\\loading.jl:1094"
      ]
     }
    ],
@@ -520,14 +539,19 @@
    "metadata": {},
    "outputs": [
     {
-     "ename": "MethodError",
+     "ename": "LoadError",
      "evalue": "MethodError: objects of type Int64 are not callable",
      "output_type": "error",
      "traceback": [
       "MethodError: objects of type Int64 are not callable",
       "",
       "Stacktrace:",
-      " [1] top-level scope at In[19]:1"
+      " [1] top-level scope",
+      "   @ In[19]:3",
+      " [2] eval",
+      "   @ .\\boot.jl:360 [inlined]",
+      " [3] include_string(mapexpr::typeof(REPL.softscope), mod::Module, code::String, filename::String)",
+      "   @ Base .\\loading.jl:1094"
      ]
     }
    ],
@@ -680,7 +704,7 @@
     {
      "data": {
       "text/plain": [
-       "3-element Array{Int64,1}:\n",
+       "3-element Vector{Int64}:\n",
        "  1\n",
        "  8\n",
        " 27"
@@ -692,7 +716,7 @@
     }
    ],
    "source": [
-    "# ドット演算子\n",
+    "# ドット演算子: ベクトル計算\n",
     "## 配列など、数値の固まりに対してドット演算子と算術演算子を適用すると\n",
     "## 固まりの各数値に対して算術演算を行うことができる\n",
     "\n",
@@ -929,6 +953,94 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Int64 => String\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 数値を文字列に変換\n",
+    "println(typeof(100), \" => \", typeof(string(100)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "LoadError",
+     "evalue": "InexactError: Int64(3.1415)",
+     "output_type": "error",
+     "traceback": [
+      "InexactError: Int64(3.1415)",
+      "",
+      "Stacktrace:",
+      " [1] Int64",
+      "   @ .\\float.jl:723 [inlined]",
+      " [2] convert(#unused#::Type{Int64}, x::Float64)",
+      "   @ Base .\\number.jl:7",
+      " [3] top-level scope",
+      "   @ In[29]:3",
+      " [4] eval",
+      "   @ .\\boot.jl:360 [inlined]",
+      " [5] include_string(mapexpr::typeof(REPL.softscope), mod::Module, code::String, filename::String)",
+      "   @ Base .\\loading.jl:1094"
+     ]
+    }
+   ],
+   "source": [
+    "# 浮動小数点を整数に変換\n",
+    "# => 整数型で表現できない場合、エラーが発生する\n",
+    "println(convert(Int, 3.1415))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "# sin(θ)^2 + cos(θ)^2 = 1\n",
+    "println(sin(10)^2 + cos(10)^2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 2, 3, 4, 5]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# ドット演算子（ベクトル計算）は数値処理関数に対しても適用可能\n",
+    "\n",
+    "# abs.([-1, -2, 3, 4, -5]) => [abs(-1), abs(-2), abs(3), abs(4), abs(-5)]\n",
+    "println(abs.([-1, -2, 3, 4, -5]))"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
@@ -937,17 +1049,17 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Julia 1.3.1",
+   "display_name": "Julia 1.6.1",
    "language": "julia",
-   "name": "julia-1.3"
+   "name": "julia-1.6"
   },
   "language_info": {
    "file_extension": ".jl",
    "mimetype": "application/julia",
    "name": "julia",
-   "version": "1.3.1"
+   "version": "1.6.1"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
