--- a/01_tutorial/02_Julia_types.ipynb
+++ b/01_tutorial/02_Julia_types.ipynb
@@ -666,9 +666,25 @@
     "\n",
     "```julia\n",
     "replace(置換対象文字列::String, 置換パターン::Pair{Pattern, Replaced}; count::Integer=typemax(Int))\n",
+    "```\n",
     "\n",
+    "`Pair` 型は2つの値をセットで保持する型で、以下のような書き方ができる\n",
+    "\n",
+    "```julia\n",
+    "# 通常のPairコンストラクタ\n",
+    "Pair(\"a\", \"A\")\n",
+    "## -> \"a\" => \"A\"\n",
+    "\n",
+    "# 簡易記法で `値1 => 値2` という書き方もできる\n",
+    "(\"val\" => 123)\n",
+    "## -> \"val\" => 123\n",
+    "```\n",
+    "\n",
+    "上記のような `Pair` 型で `置換前のパターン => 置換後の文字列` を指定することで文字列の置換ができる\n",
+    "\n",
+    "```julia\n",
     "# 全ての\"a\"を\"A\"に置換\n",
-    "replace(\"apple banana\", \"a\" => \"A\")\n",
+    "replace(\"apple banana\", Pair(\"a\", \"A\"))\n",
     "## -> \"Apple bAnAnA\"\n",
     "\n",
     "# \"a\"を1つだけ\"A\"に置換\n",
@@ -677,7 +693,7 @@
     "\n",
     "# 正規表現による置換\n",
     "## Replacedには関数を渡すことが可能\n",
-    "replace(\"apple banana\", r\"\\s([a-z])\" => uppercase)\n",
+    "replace(\"apple banana\", Pair(r\"\\s([a-z])\", uppercase))\n",
     "## -> \"apple Banana\"\n",
     "\n",
     "# Replaced: special substring\n",
@@ -693,21 +709,25 @@
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "\"snake_case\""
-      ]
-     },
-     "execution_count": 22,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "SnakeCase\n",
+      "_snake_case\n",
+      "snake_case\n"
+     ]
     }
    ],
    "source": [
     "# CamelCase を snake_case に変換する\n",
-    "snakecase = replace(\"CamelCase\", \"Camel\" => \"Snake\") # -> \"SnakeCase\"\n",
+    "snakecase = replace(\"CamelCase\", Pair(\"Camel\", \"Snake\")) # -> \"SnakeCase\"\n",
+    "println(snakecase)\n",
+    "\n",
     "snakecase = replace(snakecase, r\"([A-Z])\" => c -> \"_\" * lowercase(c)) # -> \"_snake_case\"\n",
-    "snakecase = replace(snakecase, r\"^_\" => s\"\") # -> \"snake_cake\""
+    "println(snakecase)\n",
+    "\n",
+    "snakecase = replace(snakecase, r\"^_\" => s\"\") # -> \"snake_cake\"\n",
+    "println(snakecase)"
    ]
   },
   {
@@ -813,6 +833,21 @@
     "    human[\"age\"]\n",
     "    ```\n",
     "\n",
+    "これは要するに `Pair` 型の配列（`Vector` 型）であるため、`Vector{Pair{T,N}}` とほぼ同じ構造をしている\n",
+    "\n",
+    "```julia\n",
+    "Dict(Pair(\"name\", \"Tom\"), \"sex\" => \"Male\")\n",
+    "## => Dict{String, String} with 2 entries:\n",
+    "##     \"name\" => \"Tom\"\n",
+    "##     \"sex\" => \"Male\"\n",
+    "\n",
+    "[Pair(\"name\", \"Tom\"), \"sex\" => \"Male\"]\n",
+    "## => 2-element Vector{Pair{String, String}}:\n",
+    "##     \"name\" => \"Tom\"\n",
+    "##     \"sex\" => \"Male\"\n",
+    "```\n",
+    "\n",
+    "\n",
     "他の言語では、キーは 文字列 or 数値 で表現するしかなかったが、Juliaではシンボルで表現することもできる"
    ]
   },
@@ -825,7 +860,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Dict{Symbol,Any}(:sex => :Male,:age => 20,:name => \"Tom\")\n",
+      "Dict{Symbol, Any}(:sex => :Male, :age => 20, :name => \"Tom\")\n",
       "20\n"
      ]
     }
@@ -891,17 +926,17 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Julia 1.3.1",
+   "display_name": "Julia 1.6.1",
    "language": "julia",
-   "name": "julia-1.3"
+   "name": "julia-1.6"
   },
   "language_info": {
    "file_extension": ".jl",
    "mimetype": "application/julia",
    "name": "julia",
-   "version": "1.3.1"
+   "version": "1.6.1"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
