--- a/01_tutorial/06_Jupyter_typing.ipynb
+++ b/01_tutorial/06_Jupyter_typing.ipynb
@@ -67,14 +67,19 @@
    "metadata": {},
    "outputs": [
     {
-     "ename": "TypeError",
-     "evalue": "TypeError: in typeassert, expected AbstractFloat, got Int64",
+     "ename": "LoadError",
+     "evalue": "TypeError: in typeassert, expected AbstractFloat, got a value of type Int64",
      "output_type": "error",
      "traceback": [
-      "TypeError: in typeassert, expected AbstractFloat, got Int64",
+      "TypeError: in typeassert, expected AbstractFloat, got a value of type Int64",
       "",
       "Stacktrace:",
-      " [1] top-level scope at In[2]:1"
+      " [1] top-level scope",
+      "   @ In[2]:2",
+      " [2] eval",
+      "   @ .\\boot.jl:360 [inlined]",
+      " [3] include_string(mapexpr::typeof(REPL.softscope), mod::Module, code::String, filename::String)",
+      "   @ Base .\\loading.jl:1094"
      ]
     }
    ],
@@ -96,14 +101,19 @@
      ]
     },
     {
-     "ename": "MethodError",
+     "ename": "LoadError",
      "evalue": "MethodError: no method matching add(::Float64, ::Float64)",
      "output_type": "error",
      "traceback": [
       "MethodError: no method matching add(::Float64, ::Float64)",
       "",
       "Stacktrace:",
-      " [1] top-level scope at In[3]:8"
+      " [1] top-level scope",
+      "   @ In[3]:10",
+      " [2] eval",
+      "   @ .\\boot.jl:360 [inlined]",
+      " [3] include_string(mapexpr::typeof(REPL.softscope), mod::Module, code::String, filename::String)",
+      "   @ Base .\\loading.jl:1094"
      ]
     }
    ],
@@ -441,15 +451,21 @@
    "metadata": {},
    "outputs": [
     {
-     "ename": "ErrorException",
+     "ename": "LoadError",
      "evalue": "setfield! immutable struct of type Human cannot be changed",
      "output_type": "error",
      "traceback": [
       "setfield! immutable struct of type Human cannot be changed",
       "",
       "Stacktrace:",
-      " [1] setproperty!(::Human, ::Symbol, ::Int64) at ./Base.jl:21",
-      " [2] top-level scope at In[9]:1"
+      " [1] setproperty!(x::Human, f::Symbol, v::Int64)",
+      "   @ Base .\\Base.jl:34",
+      " [2] top-level scope",
+      "   @ In[9]:2",
+      " [3] eval",
+      "   @ .\\boot.jl:360 [inlined]",
+      " [4] include_string(mapexpr::typeof(REPL.softscope), mod::Module, code::String, filename::String)",
+      "   @ Base .\\loading.jl:1094"
      ]
     }
    ],
@@ -632,7 +648,7 @@
     {
      "data": {
       "text/plain": [
-       "Tuple{Int64,String,Float64}"
+       "Tuple{Int64, String, Float64}"
       ]
      },
      "execution_count": 12,
@@ -732,7 +748,7 @@
     {
      "data": {
       "text/plain": [
-       "Tuple{AbstractString,Vararg{Int64,N} where N}"
+       "Tuple{AbstractString, Vararg{Int64, N} where N}"
       ]
      },
      "execution_count": 14,
@@ -816,8 +832,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Array{Float64,N} where N\n",
-      "Array{T,2} where T\n"
+      "Array{Float64, N} where N\n",
+      "Matrix{T} where T\n"
      ]
     }
    ],
@@ -833,6 +849,7 @@
     "println(FloatArray)\n",
     "\n",
     "# 例: 全ての2次元の配列\n",
+    "## ※ Julia 1.6 においては Array{T,2} (2次元配列) = Matrix{T} である\n",
     "const Array2D = Array{T, 2} where T\n",
     "println(Array2D)"
    ]
@@ -916,11 +933,10 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
-      "┌ Info: Precompiling Match [7eb4fadd-790c-5f42-8a69-bfa0b872bfbf]\n",
-      "└ @ Base loading.jl:1273\n"
+      "    \u001b[36m\u001b[1mFetching:\u001b[22m\u001b[39m [========================================>]  100.0 %[36m\u001b[1mFetching:\u001b[22m\u001b[39m [===========>                             ]  25.8 %>         ]  76.8 %\r"
      ]
     },
     {
@@ -935,6 +951,10 @@
     }
    ],
    "source": [
+    "# Pkgパッケージを使って Matchパッケージをインストールする\n",
+    "using Pkg\n",
+    "Pkg.add(\"Match\")\n",
+    "\n",
     "# Matchパッケージを使う\n",
     "using Match\n",
     "\n",
@@ -980,14 +1000,19 @@
    "metadata": {},
    "outputs": [
     {
-     "ename": "MethodError",
-     "evalue": "MethodError: no method matching hello(::String, ::String)\nClosest candidates are:\n  hello(::String, !Matched::Union{Type{Female}, Type{Male}}) at In[17]:12",
+     "ename": "LoadError",
+     "evalue": "MethodError: no method matching hello(::String, ::String)\n\u001b[0mClosest candidates are:\n\u001b[0m  hello(::String, \u001b[91m::Union{Type{Female}, Type{Male}}\u001b[39m) at In[17]:16",
      "output_type": "error",
      "traceback": [
-      "MethodError: no method matching hello(::String, ::String)\nClosest candidates are:\n  hello(::String, !Matched::Union{Type{Female}, Type{Male}}) at In[17]:12",
+      "MethodError: no method matching hello(::String, ::String)\n\u001b[0mClosest candidates are:\n\u001b[0m  hello(::String, \u001b[91m::Union{Type{Female}, Type{Male}}\u001b[39m) at In[17]:16",
       "",
       "Stacktrace:",
-      " [1] top-level scope at In[19]:1"
+      " [1] top-level scope",
+      "   @ In[19]:2",
+      " [2] eval",
+      "   @ .\\boot.jl:360 [inlined]",
+      " [3] include_string(mapexpr::typeof(REPL.softscope), mod::Module, code::String, filename::String)",
+      "   @ Base .\\loading.jl:1094"
      ]
     }
    ],
@@ -1002,14 +1027,19 @@
    "metadata": {},
    "outputs": [
     {
-     "ename": "MethodError",
-     "evalue": "MethodError: no method matching hello(::String, ::Type{Union{Type{Female}, Type{Male}}})\nClosest candidates are:\n  hello(::String, !Matched::Union{Type{Female}, Type{Male}}) at In[17]:12",
+     "ename": "LoadError",
+     "evalue": "MethodError: no method matching hello(::String, ::Type{Union{Type{Female}, Type{Male}}})\n\u001b[0mClosest candidates are:\n\u001b[0m  hello(::String, \u001b[91m::Union{Type{Female}, Type{Male}}\u001b[39m) at In[17]:16",
      "output_type": "error",
      "traceback": [
-      "MethodError: no method matching hello(::String, ::Type{Union{Type{Female}, Type{Male}}})\nClosest candidates are:\n  hello(::String, !Matched::Union{Type{Female}, Type{Male}}) at In[17]:12",
+      "MethodError: no method matching hello(::String, ::Type{Union{Type{Female}, Type{Male}}})\n\u001b[0mClosest candidates are:\n\u001b[0m  hello(::String, \u001b[91m::Union{Type{Female}, Type{Male}}\u001b[39m) at In[17]:16",
       "",
       "Stacktrace:",
-      " [1] top-level scope at In[20]:1"
+      " [1] top-level scope",
+      "   @ In[20]:2",
+      " [2] eval",
+      "   @ .\\boot.jl:360 [inlined]",
+      " [3] include_string(mapexpr::typeof(REPL.softscope), mod::Module, code::String, filename::String)",
+      "   @ Base .\\loading.jl:1094"
      ]
     }
    ],
@@ -1028,17 +1058,17 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Julia 1.3.1",
+   "display_name": "Julia 1.6.1",
    "language": "julia",
-   "name": "julia-1.3"
+   "name": "julia-1.6"
   },
   "language_info": {
    "file_extension": ".jl",
    "mimetype": "application/julia",
    "name": "julia",
-   "version": "1.3.1"
+   "version": "1.6.1"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
