--- a/01_tutorial/03_Julia_function.ipynb
+++ b/01_tutorial/03_Julia_function.ipynb
@@ -346,7 +346,14 @@
      "output_type": "error",
      "traceback": [
       "syntax: extra token \"sub\" after end of expression",
-      ""
+      "",
+      "Stacktrace:",
+      " [1] top-level scope",
+      "   @ In[10]:2",
+      " [2] eval",
+      "   @ .\\boot.jl:360 [inlined]",
+      " [3] include_string(mapexpr::typeof(REPL.softscope), mod::Module, code::String, filename::String)",
+      "   @ Base .\\loading.jl:1094"
      ]
     }
    ],
@@ -364,7 +371,13 @@
     "\n",
     "- 関数は、変数に代入したり、代入した変数から標準的な構文で呼び出すことが可能\n",
     "- 関数の引数としても、戻り値としても関数を使うことができる\n",
-    "- 名前をつけずに無名で生成することもできる（無名関数）"
+    "- 名前をつけずに無名で生成することもできる（無名関数）\n",
+    "\n",
+    "無名関数は以下のような記法で記述することができる\n",
+    "\n",
+    "```julia\n",
+    "(引数, ...) -> 式\n",
+    "```"
    ]
   },
   {
@@ -375,7 +388,7 @@
     {
      "data": {
       "text/plain": [
-       "#3 (generic function with 1 method)"
+       "#1 (generic function with 1 method)"
       ]
      },
      "execution_count": 11,
@@ -395,7 +408,7 @@
     {
      "data": {
       "text/plain": [
-       "#5 (generic function with 1 method)"
+       "#3 (generic function with 1 method)"
       ]
      },
      "execution_count": 12,
@@ -417,7 +430,7 @@
     {
      "data": {
       "text/plain": [
-       "3-element Array{Int64,1}:\n",
+       "3-element Vector{Int64}:\n",
        " 1\n",
        " 4\n",
        " 9"
@@ -437,6 +450,43 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1^2 = 1\n",
+      "2^2 = 4\n",
+      "3^2 = 9\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "3-element Vector{Int64}:\n",
+       " 1\n",
+       " 4\n",
+       " 9"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# 単一の式ではなく、複数の処理をまとめて書きたい場合は begin ... end ブロックでくくる\n",
+    "map(x -> begin\n",
+    "        ans = x^2\n",
+    "        println(\"$x^2 = $ans\")\n",
+    "        return ans\n",
+    "    end, [1, 2, 3])"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -450,7 +500,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -489,7 +539,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -508,7 +558,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -535,7 +585,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -551,7 +601,7 @@
        "199"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -583,7 +633,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -599,7 +649,7 @@
        "4.0"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -608,6 +658,7 @@
     "# キーワード引数に対して省略記号を付与することも可能\n",
     "\n",
     "function addWithShowingMessage(x, y; kwargs...)\n",
+    "    # 省略記号を付与されたキーワード引数はシンボルの添字で取得可能\n",
     "    if kwargs[:showAddingMessage]\n",
     "        printMessageForAdding(x, y)\n",
     "    end\n",
@@ -633,13 +684,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "5-element Array{Int64,1}:\n",
+       "5-element Vector{Int64}:\n",
        "  3\n",
        "  4\n",
        "  9\n",
@@ -647,7 +698,7 @@
        " 15"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -671,13 +722,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "5-element Array{Int64,1}:\n",
+       "5-element Vector{Int64}:\n",
        "  3\n",
        "  4\n",
        "  9\n",
@@ -685,7 +736,7 @@
        " 15"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -705,7 +756,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -728,8 +779,8 @@
     "    end\n",
     "end\n",
     "\n",
-    "# .gitignore を読み込んで 内容を出力する\n",
-    "fopen(\".gitignore\") do io\n",
+    "# ../.gitignore を読み込んで 内容を出力する\n",
+    "fopen(\"../.gitignore\") do io\n",
     "    println(read(io, String))\n",
     "end"
    ]
@@ -753,19 +804,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "3-element Array{Int64,1}:\n",
+       "3-element Vector{Int64}:\n",
        " 5\n",
        " 7\n",
        " 9"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -792,17 +843,17 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Julia 1.3.1",
+   "display_name": "Julia 1.6.1",
    "language": "julia",
-   "name": "julia-1.3"
+   "name": "julia-1.6"
   },
   "language_info": {
    "file_extension": ".jl",
    "mimetype": "application/julia",
    "name": "julia",
-   "version": "1.3.1"
+   "version": "1.6.1"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
