--- a/01_tutorial/04_Jupyter_expression.ipynb
+++ b/01_tutorial/04_Jupyter_expression.ipynb
@@ -227,16 +227,23 @@
      ]
     },
     {
-     "ename": "ErrorException",
+     "ename": "LoadError",
      "evalue": "階乗を計算する場合は正の整数を指定してください",
      "output_type": "error",
      "traceback": [
       "階乗を計算する場合は正の整数を指定してください",
       "",
       "Stacktrace:",
-      " [1] error(::String) at ./error.jl:33",
-      " [2] fact(::Int64) at ./In[6]:11",
-      " [3] top-level scope at In[6]:22"
+      " [1] error(s::String)",
+      "   @ Base .\\error.jl:33",
+      " [2] fact(n::Int64)",
+      "   @ Main .\\In[6]:11",
+      " [3] top-level scope",
+      "   @ In[6]:24",
+      " [4] eval",
+      "   @ .\\boot.jl:360 [inlined]",
+      " [5] include_string(mapexpr::typeof(REPL.softscope), mod::Module, code::String, filename::String)",
+      "   @ Base .\\loading.jl:1094"
      ]
     }
    ],
@@ -528,15 +535,21 @@
      ]
     },
     {
-     "ename": "DomainError",
+     "ename": "LoadError",
      "evalue": "DomainError with -1:\n",
      "output_type": "error",
      "traceback": [
       "DomainError with -1:\n",
       "",
       "Stacktrace:",
-      " [1] f(::Int64) at ./In[13]:5",
-      " [2] top-level scope at In[13]:9"
+      " [1] f(x::Int64)",
+      "   @ Main .\\In[13]:5",
+      " [2] top-level scope",
+      "   @ In[13]:9",
+      " [3] eval",
+      "   @ .\\boot.jl:360 [inlined]",
+      " [4] include_string(mapexpr::typeof(REPL.softscope), mod::Module, code::String, filename::String)",
+      "   @ Base .\\loading.jl:1094"
      ]
     }
    ],
@@ -565,16 +578,23 @@
      ]
     },
     {
-     "ename": "ErrorException",
+     "ename": "LoadError",
      "evalue": "正の値を指定してください",
      "output_type": "error",
      "traceback": [
       "正の値を指定してください",
       "",
       "Stacktrace:",
-      " [1] error(::String) at ./error.jl:33",
-      " [2] f(::Int64) at ./In[14]:5",
-      " [3] top-level scope at In[14]:9"
+      " [1] error(s::String)",
+      "   @ Base .\\error.jl:33",
+      " [2] f(x::Int64)",
+      "   @ Main .\\In[14]:5",
+      " [3] top-level scope",
+      "   @ In[14]:9",
+      " [4] eval",
+      "   @ .\\boot.jl:360 [inlined]",
+      " [5] include_string(mapexpr::typeof(REPL.softscope), mod::Module, code::String, filename::String)",
+      "   @ Base .\\loading.jl:1094"
      ]
     }
    ],
@@ -617,15 +637,21 @@
      ]
     },
     {
-     "ename": "ErrorException",
+     "ename": "LoadError",
      "evalue": "Hi",
      "output_type": "error",
      "traceback": [
       "Hi",
       "",
       "Stacktrace:",
-      " [1] error(::String) at ./error.jl:33",
-      " [2] top-level scope at In[15]:12"
+      " [1] error(s::String)",
+      "   @ Base .\\error.jl:33",
+      " [2] top-level scope",
+      "   @ In[15]:14",
+      " [3] eval",
+      "   @ .\\boot.jl:360 [inlined]",
+      " [4] include_string(mapexpr::typeof(REPL.softscope), mod::Module, code::String, filename::String)",
+      "   @ Base .\\loading.jl:1094"
      ]
     }
    ],
@@ -711,17 +737,25 @@
      ]
     },
     {
-     "ename": "ErrorException",
-     "evalue": "fakefile は 存在しないファイルです",
+     "ename": "LoadError",
+     "evalue": ".gitignore は 存在しないファイルです",
      "output_type": "error",
      "traceback": [
-      "fakefile は 存在しないファイルです",
+      ".gitignore は 存在しないファイルです",
       "",
       "Stacktrace:",
-      " [1] error(::String) at ./error.jl:33",
-      " [2] fopen(::var\"#5#6\", ::String, ::String) at ./In[17]:9",
-      " [3] fopen(::Function, ::String) at ./In[17]:5",
-      " [4] top-level scope at In[17]:23"
+      " [1] error(s::String)",
+      "   @ Base .\\error.jl:33",
+      " [2] fopen(callback::var\"#3#4\", filename::String, mode::String)",
+      "   @ Main .\\In[17]:9",
+      " [3] fopen(callback::Function, filename::String)",
+      "   @ Main .\\In[17]:5",
+      " [4] top-level scope",
+      "   @ In[17]:25",
+      " [5] eval",
+      "   @ .\\boot.jl:360 [inlined]",
+      " [6] include_string(mapexpr::typeof(REPL.softscope), mod::Module, code::String, filename::String)",
+      "   @ Base .\\loading.jl:1094"
      ]
     }
    ],
@@ -744,13 +778,13 @@
     "    end\n",
     "end\n",
     "\n",
-    "# .gitignore を読み込んで 内容を出力する\n",
-    "fopen(\".gitignore\") do io\n",
+    "# ../.gitignore を読み込んで 内容を出力する\n",
+    "fopen(\"../.gitignore\") do io\n",
     "    println(read(io, String))\n",
     "end\n",
     "\n",
     "# 存在しないファイルを読み込もうとした場合\n",
-    "fopen(\"fakefile\") do io\n",
+    "fopen(\".gitignore\") do io\n",
     "    println(read(io, String))\n",
     "end"
    ]
@@ -765,17 +799,17 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Julia 1.3.1",
+   "display_name": "Julia 1.6.1",
    "language": "julia",
-   "name": "julia-1.3"
+   "name": "julia-1.6"
   },
   "language_info": {
    "file_extension": ".jl",
    "mimetype": "application/julia",
    "name": "julia",
-   "version": "1.3.1"
+   "version": "1.6.1"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
