--- a/01_tutorial/05_Julia_scope.ipynb
+++ b/01_tutorial/05_Julia_scope.ipynb
@@ -168,14 +168,19 @@
    "metadata": {},
    "outputs": [
     {
-     "ename": "UndefVarError",
+     "ename": "LoadError",
      "evalue": "UndefVarError: z not defined",
      "output_type": "error",
      "traceback": [
       "UndefVarError: z not defined",
       "",
       "Stacktrace:",
-      " [1] top-level scope at In[4]:4"
+      " [1] top-level scope",
+      "   @ :0",
+      " [2] eval",
+      "   @ .\\boot.jl:360 [inlined]",
+      " [3] include_string(mapexpr::typeof(REPL.softscope), mod::Module, code::String, filename::String)",
+      "   @ Base .\\loading.jl:1094"
      ]
     }
    ],
@@ -193,9 +198,18 @@
    "metadata": {},
    "source": [
     "#### ソフトローカルスコープ\n",
-    "基本的に全ての変数は親スコープから受け継がれる\n",
+    "変数の読み取りに関しては、基本的に全ての変数は親スコープから受け継がれる\n",
     "\n",
-    "ソフトローカルスコープは `for`, `while`, 内包表記, `try-catch-finally`, `let` ブロックに導入されており、親スコープの変数に対して読取・書込の両方を行うことができる"
+    "ソフトローカルスコープは `for`, `while`, 内包表記, `try-catch-finally`, `let` ブロックに導入されており、親スコープの変数に対して読み取り・書き込みの両方を行うことができる\n",
+    "\n",
+    "---\n",
+    "\n",
+    "#### Julia 1.5 以降の注意\n",
+    "Julia 1.5 以降、上記のような挙動は分かりにくいため廃止された\n",
+    "\n",
+    "そのため、親スコープの変数に対する読み取り・書き込みを行いたい場合は、明示的に `global` キーワードを用いる必要がある\n",
+    "\n",
+    "ただし、読み取りのみであれば、引き続き親スコープの変数情報が引き継がれる"
    ]
   },
   {
@@ -204,9 +218,16 @@
    "metadata": {},
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2\n"
+     ]
+    },
+    {
      "data": {
       "text/plain": [
-       "2"
+       "0"
       ]
      },
      "execution_count": 5,
@@ -220,19 +241,58 @@
     "\n",
     "# letブロック\n",
     "let\n",
-    "    # 親スコープの変数 x, y に対して読取・書込可能\n",
+    "    # 親スコープの変数 x, y の値を読み取る\n",
     "    ## x = 0, y = 1\n",
     "    ## x <- y + 1 = 1 + 1 = 2\n",
     "    x = y + 1\n",
+    "    println(x)\n",
     "end\n",
     "\n",
-    "# letブロック内で行われた変更は親スコープの変数に反映されている\n",
-    "x"
+    "# ソフトローカルスコープは廃止されたため、letブロック内で行われた変更は、グローバル変数には影響しない\n",
+    "x # -> 0 のまま"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "2"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# グローバル変数 x, y\n",
+    "x, y = 0, 1\n",
+    "\n",
+    "# letブロック\n",
+    "let\n",
+    "    # 親スコープの変数 x に対して書き込みを行いたい場合は global キーワードを用いる\n",
+    "    global x = y + 1\n",
+    "    println(x)\n",
+    "end\n",
+    "\n",
+    "# グローバル変数に変更が反映されている\n",
+    "x # -> 2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -248,7 +308,7 @@
        "(0, 1)"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -268,37 +328,6 @@
     "\n",
     "# local変数の変更はglobal変数には関係ない\n",
     "x, y # -> 0, 1"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "2"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# localキーワードの反対に、globalキーワードもある\n",
-    "## ソフトローカルスコープでは、自動的にglobal変数を参照するため明示する意味はない\n",
-    "\n",
-    "x, y = 0, 1\n",
-    "\n",
-    "let\n",
-    "    # global変数 x, y を参照\n",
-    "    global x, y\n",
-    "    x = y + 1\n",
-    "end\n",
-    "\n",
-    "x"
    ]
   },
   {
@@ -357,7 +386,12 @@
     "#### ハードローカルスコープ\n",
     "ハードローカルスコープは、関数定義、タイプ定義(`struct`ブロック)、およびマクロ定義によって導入される\n",
     "\n",
-    "ハードローカルスコープでは、親スコープの変数に対して**読取だけが受け継がれる**"
+    "ハードローカルスコープでは、親スコープの変数に対して**読取だけが受け継がれる**\n",
+    "\n",
+    "---\n",
+    "\n",
+    "#### Julia 1.5 以降の注意点\n",
+    "先述の通り、Julia 1.5 以降は、全てハードローカルスコープとなる"
    ]
   },
   {
@@ -403,14 +437,19 @@
    "metadata": {},
    "outputs": [
     {
-     "ename": "ErrorException",
+     "ename": "LoadError",
      "evalue": "invalid redefinition of constant PI",
      "output_type": "error",
      "traceback": [
       "invalid redefinition of constant PI",
       "",
       "Stacktrace:",
-      " [1] top-level scope at In[10]:3"
+      " [1] top-level scope",
+      "   @ In[10]:5",
+      " [2] eval",
+      "   @ .\\boot.jl:360 [inlined]",
+      " [3] include_string(mapexpr::typeof(REPL.softscope), mod::Module, code::String, filename::String)",
+      "   @ Base .\\loading.jl:1094"
      ]
     }
    ],
@@ -430,7 +469,7 @@
     {
      "data": {
       "text/plain": [
-       "3-element Array{Int64,1}:\n",
+       "3-element Vector{Int64}:\n",
        " 10\n",
        " 20\n",
        " 30"
@@ -442,18 +481,18 @@
     }
    ],
    "source": [
-    "# 定数 ARY = [1, 2, 3] 定義\n",
-    "const ARY = [1, 2, 3]\n",
+    "# 定数 VEC = [1, 2, 3] 定義\n",
+    "const VEC = [1, 2, 3]\n",
     "\n",
     "# ARY に別の値を再代入することはできない\n",
     "## ARY = [3, 4, 5] -> Error\n",
     "\n",
     "# ARY の配列の要素を変更できないわけではない\n",
-    "ARY[1] = 10 ## Juliaの添字は 1 から始まる\n",
-    "ARY[2] = 20\n",
-    "ARY[3] = 30\n",
+    "VEC[1] = 10 ## Juliaの添字は 1 から始まる\n",
+    "VEC[2] = 20\n",
+    "VEC[3] = 30\n",
     "\n",
-    "ARY"
+    "VEC"
    ]
   },
   {
@@ -466,17 +505,17 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Julia 1.3.1",
+   "display_name": "Julia 1.6.1",
    "language": "julia",
-   "name": "julia-1.3"
+   "name": "julia-1.6"
   },
   "language_info": {
    "file_extension": ".jl",
    "mimetype": "application/julia",
    "name": "julia",
-   "version": "1.3.1"
+   "version": "1.6.1"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
