🐛 fix: tutorial/metaprogramming: 関数Expr構造

--- a/01_tutorial/07_metaprogramming.ipynb
+++ b/01_tutorial/07_metaprogramming.ipynb
@@ -847,8 +847,17 @@
     "    func に function を指定した場合: Expr(\n",
     "        head::Symbol = function,\n",
     "        args::Array{Any}(\n",
-    "            [1] = 関数名\n",
-    "            [2...] = 関数の引数\n",
+    "            [1] = Expr(\n",
+    "                head::Symbol = call,\n",
+    "                args::Array{Any}(\n",
+    "                    [1] = 関数名,\n",
+    "                    [2...] = 関数の引数\n",
+    "                )\n",
+    "            ),\n",
+    "            [2] = Expr(\n",
+    "                head::Symbol = block,\n",
+    "                args::Array{Any}\n",
+    "            )\n",
     "        )\n",
     "    )\n",
     "    \"\"\"\n",
