🍱 add: tutorial/metaprogramming: 型アノテーション付き関数デコレータ

--- a/01_tutorial/07_metaprogramming.ipynb
+++ b/01_tutorial/07_metaprogramming.ipynb
@@ -826,10 +826,10 @@
       "      head: Symbol block\n",
       "      args: Array{Any}((3,))\n",
       "        1: LineNumberNode\n",
-      "          line: Int64 18\n",
+      "          line: Int64 27\n",
       "          file: Symbol In[26]\n",
       "        2: LineNumberNode\n",
-      "          line: Int64 19\n",
+      "          line: Int64 28\n",
       "          file: Symbol In[26]\n",
       "        3: Expr\n",
       "          head: Symbol call\n",
@@ -1082,8 +1082,105 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "id": "d8237444-e047-45ab-8e4d-5cd9d0cdd4fc",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "quote\n",
+       "    #= In[31]:26 =#\n",
+       "    function var\"#179###261\"(var\"#180#str\"::Main.AbstractString)\n",
+       "        #= In[31]:34 =#\n",
+       "        #= In[31]:35 =#\n",
+       "        Main.println(\"Hello, \", var\"#180#str\")\n",
+       "    end\n",
+       "    #= In[31]:30 =#\n",
+       "    hello = (var\"#_decorator#14\"(Core.Box(:hello)))(var\"#179###261\")\n",
+       "end"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "\"\"\"\n",
+    "型アノテーション付き関数への対応\n",
+    "\"\"\"\n",
+    "macro log_calls(func)\n",
+    "    name = func.args[1].args[1]\n",
+    "    hiddenname = gensym() # 元の関数名を置換する任意変数名\n",
+    "    \n",
+    "    # 元の関数名を hiddenname で置換\n",
+    "    if typeof(name) == Expr # 型アノテーション付き関数に対応\n",
+    "        name = name.args[1]\n",
+    "        func.args[1].args[1].args[1] = hiddenname\n",
+    "    else\n",
+    "        func.args[1].args[1] = hiddenname\n",
+    "    end\n",
+    "    \n",
+    "    # 修飾した関数を定義\n",
+    "    ## 関数呼び出し前後で info レベルロギング\n",
+    "    _decorator(f) = (args...) -> begin\n",
+    "        Base.@info \"calling $(name)\"\n",
+    "        f(args...)\n",
+    "        Base.@info \"called $(name)\"\n",
+    "    end\n",
+    "    \n",
+    "    quote\n",
+    "        # 元の関数定義を別名で再定義\n",
+    "        $func\n",
+    "        \n",
+    "        # 元の関数名: 修飾された関数として再定義\n",
+    "        ## `hello = ...` という形式で展開されて欲しいため `$(esc(name)) = ...` という形式で記述する\n",
+    "        $(esc(name)) = $_decorator($hiddenname)\n",
+    "    end\n",
+    "end\n",
+    "\n",
+    "@macroexpand @log_calls function hello(str::AbstractString)\n",
+    "    println(\"Hello, \", str)\n",
+    "end"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "id": "00c79e6a-81ed-44cb-b4d7-29fae22be406",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello, World!!!\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "┌ Info: calling hello\n",
+      "└ @ Main In[31]:19\n",
+      "┌ Info: called hello\n",
+      "└ @ Main In[31]:21\n"
+     ]
+    }
+   ],
+   "source": [
+    "@log_calls function hello(str::AbstractString)\n",
+    "    println(\"Hello, \", str)\n",
+    "end\n",
+    "\n",
+    "hello(\"World!!!\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a457dfc7-4f28-4599-8cec-ea39770e055f",
    "metadata": {},
    "outputs": [],
    "source": []
