🍱 add: tutorial: OOP等追加

--- a/01_tutorial/06_Jupyter_typing.ipynb
+++ b/01_tutorial/06_Jupyter_typing.ipynb
@@ -1049,6 +1049,321 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 関数のオーバーロード\n",
+    "\n",
+    "Juliaにおいては、同名の関数であっても、引数にとる値が異なれば別の関数として定義することが出来る\n",
+    "\n",
+    "これを **関数のオーバーロード** と呼ぶ"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "hello_doubled\n",
+      "246\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 文字列に \"_doubled\" を追加する関数\n",
+    "function double(str::AbstractString)\n",
+    "    str * \"_doubled\"\n",
+    "end\n",
+    "\n",
+    "# 数値を2倍にする関数\n",
+    "function double(num::Number)\n",
+    "    num * 2\n",
+    "end\n",
+    "\n",
+    "# 同名の関数（double）であっても異なる挙動をとる\n",
+    "println(double(\"hello\")) # => \"hello_doubled\"\n",
+    "println(double(123)) # => 246"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 演算子のオーバーロード\n",
+    "[03_julia_function.ipynb](./03_julia_function.ipynb) で記したように、Juliaにおいては、`&&` や `||` のような短絡評価演算子以外は、全て関数として定義されている\n",
+    "\n",
+    "```julia\n",
+    "# 中置記法関数としての `+`\n",
+    "println(1 + 2 + 3) # -> 6\n",
+    "\n",
+    "# `+` は、通常の関数と同じ呼び出し方もできる\n",
+    "println(+(1, 2, 3)) # -> 6\n",
+    "```\n",
+    "\n",
+    "したがって、通常の関数と同様にオーバーロードすることができる\n",
+    "\n",
+    "ただし、オーバーロード時は `モジュール名.:演算子` という形式で関数名を定義する必要がある\n",
+    "\n",
+    "例えば `+` 演算子は `Base` モジュールで定義されている関数であるため、以下のように定義する"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Point(3, 5)"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "using Base # Baseモジュールは最初から使用可能なため、本当は明示的に using する必要はない\n",
+    "\n",
+    "# Point 可変複合型\n",
+    "mutable struct Point\n",
+    "    x::Number\n",
+    "    y::Number\n",
+    "end\n",
+    "\n",
+    "# Point型に対して `+` 演算子をオーバーロード\n",
+    "function Base.:+(a::Point, b::Point)\n",
+    "    Point(a.x + b.x, a.y + b.y)\n",
+    "end\n",
+    "\n",
+    "a = Point(1, 2)\n",
+    "b = Point(2, 3)\n",
+    "a + b"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Point(2, 1)"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# 転置演算子 `'` は LinearAlgebraモジュールで adjoint 関数として定義されているため、以下のように記述する\n",
+    "using LinearAlgebra\n",
+    "\n",
+    "function LinearAlgebra.:adjoint(a::Point)\n",
+    "    Point(a.y, a.x)\n",
+    "end\n",
+    "\n",
+    "a'"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### オブジェクト指向風プログラミング\n",
+    "Juliaは、基本的に関数型言語であり、オブジェクト指向言語ではない\n",
+    "\n",
+    "しかし、可変複合型と関数オーバーロードにより、より柔軟なオブジェクト指向風の記述が可能となっている"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "I'm Hero\n",
+      "Player\n",
+      "  name: String \"Hero\"\n",
+      "  hp: Int64 90\n",
+      "  atk: Int64 15\n",
+      "  def: Int64 10\n",
+      "Player\n",
+      "  name: String \"Monster\"\n",
+      "  hp: Int64 45\n",
+      "  atk: Int64 20\n",
+      "  def: Int64 10\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Player 可変複合型\n",
+    "mutable struct Player\n",
+    "    name::AbstractString\n",
+    "    hp::Integer  # HP\n",
+    "    atk::Integer # 攻撃力\n",
+    "    def::Integer # 防御力\n",
+    "end\n",
+    "\n",
+    "# Playerコンストラクタ\n",
+    "## 複合体名と同名の関数を定義（関数オーバーロード）することでコンストラクタを代替\n",
+    "function Player(name; hp = 100, atk = 10, def = 10)\n",
+    "    Player(name, hp, atk, def)\n",
+    "end\n",
+    "\n",
+    "# `*` 演算子オーバーロード\n",
+    "## Player同士の攻撃力と防御力の差から各々のHPを減じる\n",
+    "function Base.:*(a::Player, b::Player)\n",
+    "    (\n",
+    "        Player(a.name; hp = a.hp - (b.atk - a.def < 0 ? 0 : b.atk - a.def), atk = a.atk, def = a.def),\n",
+    "        Player(b.name; hp = b.hp - (a.atk - b.def < 0 ? 0 : a.atk - b.def), atk = b.atk, def = b.def)\n",
+    "    )\n",
+    "end\n",
+    "\n",
+    "# Player同士の戦闘実行関数\n",
+    "## Juliaでは慣例的に、副作用のある関数には `!` をつける\n",
+    "function battle!(a::Player, b::Player)\n",
+    "    (new_a, new_b) = a * b\n",
+    "    a.hp = new_a.hp\n",
+    "    b.hp = new_b.hp\n",
+    "    (a, b)\n",
+    "end\n",
+    "\n",
+    "# `()` call演算子オーバーロード\n",
+    "## 自身の name を表示\n",
+    "function (self::Player)(append_message = \"\")\n",
+    "    println(append_message, self.name)\n",
+    "end\n",
+    "\n",
+    "# ----------\n",
+    "\n",
+    "player = Player(\"Hero\"; atk = 15)\n",
+    "enemy = Player(\"Monster\"; hp = 50, atk = 20)\n",
+    "\n",
+    "player(\"I'm \") # => \"I'm Hero\"\n",
+    "\n",
+    "battle!(player, enemy)\n",
+    "dump(player)\n",
+    "dump(enemy)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 内部コンストラクタメソッド\n",
+    "上記のように、複合体と同名の関数をオーバーライドしてコンストラクタを定義する方法を **外部コンストラクタメソッド** と呼ぶ\n",
+    "\n",
+    "外部コンストラクタメソッドはオブジェクトの構築をより簡単にする（複合体の全フィールドを毎回指定しなくて良いようにする）が、**不変条件の強制**と、**自己参照的なオブジェクトの構築**には対応できない\n",
+    "\n",
+    "この二つの問題の解決には **内部コンストラクタメソッド** を使うことになる\n",
+    "\n",
+    "内部コンストラクタメソッドは基本的に外部コンストラクタメソッドと同様だが、以下の二つの違いがある\n",
+    "\n",
+    "- 型宣言と同じブロックで定義される\n",
+    "- ローカルに定義される特殊な関数 `new` へのアクセスを持つ\n",
+    "    - `new` は内部コンストラクタメソッドが属するブロックで定義される型のインスタンスを生成する\n",
+    "\n",
+    "例として、「一つ目の数が二つ目の数以下である」という制約を持つ実数の組を保持する型は次のように宣言できる\n",
+    "\n",
+    "```julia\n",
+    "struct OrderedPair\n",
+    "    x::Real\n",
+    "    y::Real\n",
+    "    \n",
+    "    # 内部コンストラクタメソッド\n",
+    "    function OrderedPair(x, y)\n",
+    "        x > y ? error(\"out of order\") : new(x,y)\n",
+    "    end\n",
+    "end\n",
+    "```\n",
+    "\n",
+    "こうして定義される `OrderedPair` 型のオブジェクトは、`x <= y` の制約条件を満たすときにだけ構築できる"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "OrderedPair\n",
+      "  x: Int64 1\n",
+      "  y: Int64 2\n"
+     ]
+    },
+    {
+     "ename": "LoadError",
+     "evalue": "out of order",
+     "output_type": "error",
+     "traceback": [
+      "out of order",
+      "",
+      "Stacktrace:",
+      " [1] error(s::String)",
+      "   @ Base ./error.jl:33",
+      " [2] OrderedPair(x::Int64, y::Int64)",
+      "   @ Main ./In[12]:7",
+      " [3] top-level scope",
+      "   @ In[12]:16",
+      " [4] eval",
+      "   @ ./boot.jl:360 [inlined]",
+      " [5] include_string(mapexpr::typeof(REPL.softscope), mod::Module, code::String, filename::String)",
+      "   @ Base ./loading.jl:1094"
+     ]
+    }
+   ],
+   "source": [
+    "struct OrderedPair\n",
+    "    x::Real\n",
+    "    y::Real\n",
+    "    \n",
+    "    # 内部コンストラクタメソッド\n",
+    "    function OrderedPair(x, y)\n",
+    "        x > y ? error(\"out of order\") : new(x,y)\n",
+    "    end\n",
+    "end\n",
+    "\n",
+    "# 生成可能な OrderedPair\n",
+    "pair1 = OrderedPair(1, 2)\n",
+    "dump(pair1)\n",
+    "\n",
+    "# 生成不可能な OrderedPair\n",
+    "pair2 = OrderedPair(2, 1)\n",
+    "dump(pair2)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "ただし、上記の型が `mutable` として宣言されていれば、フィールドの値を直接変更してこの不変条件を破ることができる\n",
+    "\n",
+    "しかしながら、オブジェクトの内部情報をいじるのは招かれざる操作であり、行うべきではない（他のオブジェクト指向言語では `private` 宣言等でフィールドへのアクセスを禁止し隠蔽することが出来るが、現状の Julia ではサポートされていない）\n",
+    "\n",
+    "また、外部コンストラクタメソッドは後から追加可能だが、内部コンストラクタメソッドを後から追加する方法はない\n",
+    "\n",
+    "外部コンストラクタメソッドは他のコンストラクタメソッドを呼ぶことでしかオブジェクトを構築できないため、オブジェクトの構築では必ずどこかで内部コンストラクタメソッドが呼ばれることになる\n",
+    "\n",
+    "これにより、被宣言型の任意のオブジェクトが型の定義と共に提供される内部コンストラクタメソッドで構築されることが保証され、型の不変条件をある程度強制できるようになる、という仕組みである\n",
+    "\n",
+    "なお、**内部コンストラクタメソッドが一つでも定義されると、デフォルトのコンストラクタメソッドは提供されなくなる**ため注意"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
