--- a/01_tutorial/03_Julia_function.ipynb
+++ b/01_tutorial/03_Julia_function.ipynb
@@ -351,9 +351,9 @@
       " [1] top-level scope",
       "   @ In[10]:2",
       " [2] eval",
-      "   @ .\\boot.jl:360 [inlined]",
+      "   @ ./boot.jl:360 [inlined]",
       " [3] include_string(mapexpr::typeof(REPL.softscope), mod::Module, code::String, filename::String)",
-      "   @ Base .\\loading.jl:1094"
+      "   @ Base ./loading.jl:1094"
      ]
     }
    ],
@@ -831,6 +831,40 @@
     "## 3 * [1, 2, 3] + 4 * [4, 5, 6]\n",
     "## -> [19, 26, 33]\n",
     "f.(A, B)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### パイプ処理\n",
+    "ほとんどの関数型言語はパイプライン処理をサポートしているが、Juliaも同様に、パイプ演算子を使った関数の連鎖が可能である\n",
+    "\n",
+    "Juliaのパイプ演算子は `|>` であり、左辺の戻り値を直接、右辺にある関数の引数に渡すことができる"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 2, 3, 4]\n",
+      "[1, 2, 3, 4]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# [3, 2, 1, 1, 3, 2, 4] を昇順並び替え => 重複削除\n",
+    "vec = unique(sort([3, 2, 1, 1, 3, 2, 4]))\n",
+    "println(vec) # => [1, 2, 3, 4]\n",
+    "\n",
+    "# パイプ演算子でチェイン形式で記述\n",
+    "vec = [3, 2, 1, 1, 3, 2, 4] |> sort |> unique\n",
+    "println(vec) # => [1, 2, 3, 4]"
    ]
   },
   {
