--- a/01_tutorial/07_Julia_vector.ipynb
+++ b/01_tutorial/07_Julia_vector.ipynb
@@ -11,7 +11,7 @@
     "### 一次元配列\n",
     "Juliaにおいて、配列とは一次元配列であり、`[要素, 要素, ...]` のように `,` 区切りで表現される\n",
     "\n",
-    "なお、一次元配列とは列ベクトルを表しているため注意が必要"
+    "なお、一次元配列とは列ベクトルを表しているため注意が必要（Julia以外の大抵の言語では、一次元配列は行ベクトルとなっている）"
    ]
   },
   {
@@ -22,7 +22,7 @@
     {
      "data": {
       "text/plain": [
-       "3-element Array{Int64,1}:\n",
+       "3-element Vector{Int64}:\n",
        " 1\n",
        " 3\n",
        " 4"
@@ -44,7 +44,7 @@
     "### 固定長配列の作成\n",
     "固定長配列の作成方法は以下のようにいくつか用意されている\n",
     "\n",
-    "- Array型のコンストラクタ: `Array{型, 1}(undef, 要素数)` or `Vector{型}(undef, 要素数)`\n",
+    "- Vector型のコンストラクタ: `Vector{型}(undef, 要素数)`\n",
     "    - 要素数分、任意の値で埋めた配列が生成される\n",
     "- zeros: `zeros([型,] 要素数)`\n",
     "    - 要素数分 0 で埋めた配列が生成される\n",
@@ -63,10 +63,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "a: Array{Float64,1} [6.91073946044235e-310, 6.91075376470524e-310, 6.9107537654728e-310]\n",
-      "z: Array{Float64,1} [0.0, 0.0]\n",
-      "o: Array{Float64,1} [1.0, 1.0, 1.0, 1.0]\n",
-      "f: Array{Float64,1} [1.23, 1.23, 1.23, 1.23, 1.23]\n"
+      "a: Vector{Float64} [6.92965100442456e-310, 6.9296476851943e-310, 6.9295767957685e-310]\n",
+      "z: Vector{Float64} [0.0, 0.0]\n",
+      "o: Vector{Float64} [1.0, 1.0, 1.0, 1.0]\n",
+      "f: Vector{Float64} [1.23, 1.23, 1.23, 1.23, 1.23]\n"
      ]
     }
    ],
@@ -93,11 +93,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "a: Array{Int64,1} [1, 2, 3]\n",
-      "b: Array{Int64,1} [1, 3, 5]\n",
-      "c: Array{Int64,1} [1, 3, 5]\n",
-      "d: Array{Int64,1} [1, 3, 5]\n",
-      "e: Array{String,1} [\"1\", \"2\", \"Fizz\", \"4\", \"Buzz\", \"Fizz\", \"7\", \"8\", \"Fizz\", \"Buzz\", \"11\", \"Fizz\", \"13\", \"14\", \"Fizz Buzz\"]\n"
+      "a: Vector{Int64} [1, 2, 3]\n",
+      "b: Vector{Int64} [1, 3, 5]\n",
+      "c: Vector{Int64} [1, 3, 5]\n",
+      "d: Vector{Int64} [1, 3, 5]\n",
+      "e: Vector{String} [\"1\", \"2\", \"Fizz\", \"4\", \"Buzz\", \"Fizz\", \"7\", \"8\", \"Fizz\", \"Buzz\", \"11\", \"Fizz\", \"13\", \"14\", \"Fizz Buzz\"]\n"
      ]
     }
    ],
@@ -145,7 +145,9 @@
     "### 二次元配列\n",
     "一次元以上の配列もまた、一次元配列と同様の方法で作成できる\n",
     "\n",
-    "ただし、各要素（列）は空白で区切り、行を追加するなら `;` または 改行 を使う"
+    "ただし、各要素（列）は空白で区切り、行を追加するなら `;` または 改行 を使う\n",
+    "\n",
+    "なお、バージョン 1.6.1 時点で、多次元配列は `Array` 型ではなく `Matrix` 型として定義されている"
    ]
   },
   {
@@ -157,9 +159,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "a: 1×3 Array{Int64,2} [1 3 4]\n",
-      "b: 2×2 Array{Int64,2} [1 2; 3 4]\n",
-      "c: 2×2 Array{Int64,2} [1 2; 3 4]\n"
+      "a: 1×3 Matrix{Int64} [1 3 4]\n",
+      "a: 3×1 Vector{Int64} [1, 3, 4]\n",
+      "b: 2×3 Matrix{Int64} [1 2 3; 4 5 6]\n",
+      "c: 2×3 Matrix{Int64} [1 2 3; 4 5 6]\n"
      ]
     }
    ],
@@ -167,12 +170,15 @@
     "a = [1 3 4]\n",
     "println(\"a: $(size(a,1))×$(size(a,2)) $(typeof(a)) $(a)\")\n",
     "\n",
-    "b = [1 2; 3 4]\n",
-    "println(\"b: $(size(b,1))×$(size(b,2)) $(typeof(b)) $(b)\")\n",
+    "b = [1; 3; 4]\n",
+    "println(\"a: $(size(b,1))×$(size(b,2)) $(typeof(b)) $(b)\")\n",
     "\n",
-    "c = [1 2\n",
-    "    3 4]\n",
-    "println(\"c: $(size(c,1))×$(size(c,2)) $(typeof(c)) $(c)\")"
+    "c = [1 2 3; 4 5 6]\n",
+    "println(\"b: $(size(c,1))×$(size(c,2)) $(typeof(c)) $(c)\")\n",
+    "\n",
+    "d = [1 2 3\n",
+    "    4 5 6]\n",
+    "println(\"c: $(size(d,1))×$(size(d,2)) $(typeof(d)) $(d)\")"
    ]
   },
   {
@@ -184,9 +190,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "b: 3×1 Array{Int64,2} [1; 2; 3]\n",
-      "c: 3×2 Array{Int64,2} [1 4; 2 5; 3 6]\n",
-      "d: 3×2 Array{Int64,2} [1 4; 2 5; 3 6]\n"
+      "a: 3×1 Vector{Int64} [1, 2, 3]\n",
+      "b: 3×1 Matrix{Int64} [1; 2; 3]\n",
+      "c: 3×2 Matrix{Int64} [1 4; 2 5; 3 6]\n",
+      "d: 3×2 Matrix{Int64} [1 4; 2 5; 3 6]\n"
      ]
     }
    ],
@@ -194,9 +201,12 @@
     "\"\"\"\n",
     "ベクトル（一次元配列）から行列（二次元配列）に変換\n",
     "\"\"\"\n",
-    "a = Vector(1:3) # 一次元配列 [1, 2, 3]\n",
+    "# 一次元配列 [1, 2, 3]\n",
+    "a = Vector(1:3)\n",
+    "println(\"a: $(size(a,1))×$(size(a,2)) $(typeof(a)) $(a)\")\n",
     "\n",
     "# 軸追加による行列化\n",
+    "## 3x1-Vector => 3x1-Matrix に変換される\n",
     "b = a[:, :]\n",
     "println(\"b: $(size(b,1))×$(size(b,2)) $(typeof(b)) $(b)\")\n",
     "\n",
@@ -302,7 +312,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## テンソルの変形\n",
+    "## ベクトルの変形\n",
     "\n",
     "### 次元変形\n",
     "次元変形は、次元数の合計を変更せずに各次元数を変更することである\n",
@@ -321,13 +331,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "a: 1×6 Array{Int64,2} [1 2 3 4 5 6]\n",
-      "b: 2×3 Array{Int64,2} [1 3 5; 2 4 6]\n"
+      "a: 1×6 Matrix{Int64} [1 2 3 4 5 6]\n",
+      "b: 2×3 Matrix{Int64} [1 3 5; 2 4 6]\n"
      ]
     }
    ],
    "source": [
-    "# 1x6 Array{Int,2}\n",
+    "# 1x6 Matrix{Int64}\n",
     "a = [1 2 3 4 5 6]\n",
     "println(\"a: $(size(a,1))×$(size(a,2)) $(typeof(a)) $(a)\")\n",
     "\n",
@@ -354,7 +364,7 @@
     {
      "data": {
       "text/plain": [
-       "3×3 LinearAlgebra.Adjoint{Int64,Array{Int64,2}}:\n",
+       "3×3 adjoint(::Matrix{Int64}) with eltype Int64:\n",
        " 1  4  7\n",
        " 2  5  8\n",
        " 3  6  9"
@@ -393,35 +403,39 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "v: 6×1 Array{Int64,1} [1, 2, 3, 4, 5, 6]\n",
-      "h: 3×2 Array{Int64,2} [1 4; 2 5; 3 6]\n",
-      "v: 2×3 Array{Int64,2} [1 3 5; 2 4 6]\n",
-      "h: 2×3 LinearAlgebra.Adjoint{Int64,Array{Int64,2}} [1 2 3; 4 5 6]\n"
+      "Array{Vector{Int64}}((2,))\n",
+      "  1: Array{Int64}((3,)) [1, 2, 3]\n",
+      "  2: Array{Int64}((3,)) [4, 5, 6]\n",
+      "v: 6×1 Vector{Int64} [1, 2, 3, 4, 5, 6]\n",
+      "h: 3×2 Matrix{Int64} [1 4; 2 5; 3 6]\n",
+      "v: 2×3 Matrix{Int64} [1 3 5; 2 4 6]\n",
+      "h: 2×3 LinearAlgebra.Transpose{Int64, Matrix{Int64}} [1 2 3; 4 5 6]\n"
      ]
     }
    ],
    "source": [
-    "# 2-Array{3-Array{Int, 1}, 1}\n",
+    "# 2-Array{3-Array{Int64}}\n",
     "a = [\n",
     "    [1, 2, 3],\n",
     "    [4, 5, 6],\n",
     "]\n",
+    "dump(a)\n",
     "\n",
-    "# 6 x 1 Array{Int, 2} にしたい場合: vcat\n",
+    "# 6x1-Vector{Int64} にしたい場合: vcat\n",
     "v = vcat(a...)\n",
     "println(\"v: $(size(v,1))×$(size(v,2)) $(typeof(v)) $(v)\")\n",
     "\n",
-    "# 3 x 2 Array{Int, 2} にしたい場合: hcat\n",
+    "# 3x2-Matrix{Int64} にしたい場合: hcat\n",
     "h = hcat(a...)\n",
     "println(\"h: $(size(h,1))×$(size(h,2)) $(typeof(h)) $(h)\")\n",
     "\n",
-    "# 2 x 3 Array{Int, 2} にしたい場合\n",
+    "# 2x3-Matrix{Int64} にしたい場合\n",
     "## vcat |> reshape\n",
     "v = reshape(vcat(a...), 2, 3)\n",
     "println(\"v: $(size(v,1))×$(size(v,2)) $(typeof(v)) $(v)\")\n",
     "\n",
-    "## hcat |> transpose\n",
-    "h = hcat(a...)'\n",
+    "## 水平結合後、転置行列を求める\n",
+    "h = hcat(a...) |> transpose\n",
     "println(\"h: $(size(h,1))×$(size(h,2)) $(typeof(h)) $(h)\")"
    ]
   },
@@ -446,7 +460,7 @@
     {
      "data": {
       "text/plain": [
-       "2-element Array{Int64,1}:\n",
+       "2-element Vector{Int64}:\n",
        "  46\n",
        " 118"
       ]
@@ -472,7 +486,7 @@
     {
      "data": {
       "text/plain": [
-       "2×2 Array{Int64,2}:\n",
+       "2×2 Matrix{Int64}:\n",
        "  5  12\n",
        " 21  32"
       ]
@@ -500,17 +514,17 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Julia 1.3.1",
+   "display_name": "Julia 1.6.1",
    "language": "julia",
-   "name": "julia-1.3"
+   "name": "julia-1.6"
   },
   "language_info": {
    "file_extension": ".jl",
    "mimetype": "application/julia",
    "name": "julia",
-   "version": "1.3.1"
+   "version": "1.6.1"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
