🍱 add: tutorial: REPL Unicode 入力

--- a/01_tutorial/07_Julia_vector.ipynb
+++ b/01_tutorial/07_Julia_vector.ipynb
@@ -63,7 +63,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "a: Vector{Float64} [6.92965100442456e-310, 6.9296476851943e-310, 6.9295767957685e-310]\n",
+      "a: Vector{Float64} [5.0e-324, 0.0, 6.89896358286034e-310]\n",
       "z: Vector{Float64} [0.0, 0.0]\n",
       "o: Vector{Float64} [1.0, 1.0, 1.0, 1.0]\n",
       "f: Vector{Float64} [1.23, 1.23, 1.23, 1.23, 1.23]\n"
