⏫ update: machine-learning/deep-learning

--- a/02_machine-learning/01_perceptron.ipynb
+++ b/02_machine-learning/01_perceptron.ipynb
@@ -12,7 +12,7 @@
     "        - 出力する信号は「流す／流さない（1 or 0）」の二値\n",
     "        - 各入力信号には重要度があり、それを重みで表現する\n",
     "\n",
-    "![perceptron](./img/perceptron.png)"
+    "![perceptron](./img/perceptron.drawio.png)"
    ]
   },
   {
@@ -226,7 +226,7 @@
     "\n",
     "図示すると、以下のような直線で分類を行っていると考えることができる\n",
     "\n",
-    "![perceptron_and_or](./img/perceptron_and_or.png)\n",
+    "![perceptron_and_or](./img/perceptron_and_or.drawio.png)\n",
     "\n",
     "\n",
     "### パーセプトロンの限界\n",
@@ -236,7 +236,7 @@
     "\n",
     "下図のように、XORの出力値は直線で分類することができない\n",
     "\n",
-    "![perceptron_xor](./img/perceptron_xor.png)"
+    "![perceptron_xor](./img/perceptron_xor.drawio.png)"
    ]
   },
   {
@@ -252,7 +252,7 @@
     "\n",
     "そのためには、まずはXORゲートをAND, OR, NAND, NORゲートの組み合わせに分解する必要がある（下図）\n",
     "\n",
-    "![perceptron_xor](./img/perceptron_xor_gate.png)"
+    "![perceptron_xor](./img/perceptron_xor_gate.drawio.png)"
    ]
   },
   {
@@ -299,7 +299,7 @@
     "\n",
     "今回のXOR分類問題は、中間層を一つ追加するだけで解くことができたが、より多くの中間層を積み重ねればより複雑な問題にも応用可能となる\n",
     "\n",
-    "![perceptron2](./img/perceptron2.png)"
+    "![perceptron2](./img/perceptron2.drawio.png)"
    ]
   },
   {
@@ -312,17 +312,17 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Julia 1.3.0",
+   "display_name": "Julia 1.6.1",
    "language": "julia",
-   "name": "julia-1.3"
+   "name": "julia-1.6"
   },
   "language_info": {
    "file_extension": ".jl",
    "mimetype": "application/julia",
    "name": "julia",
-   "version": "1.3.0"
+   "version": "1.6.1"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
