--- a/02_machine-learning/04_gradient.ipynb
+++ b/02_machine-learning/04_gradient.ipynb
@@ -19,7 +19,7 @@
     {
      "data": {
       "text/plain": [
-       "2×3 Array{Float64,2}:\n",
+       "2×3 Matrix{Float64}:\n",
        " 0.2  0.2  -0.4\n",
        " 0.3  0.3  -0.6"
       ]
@@ -133,7 +133,7 @@
     {
      "data": {
       "text/plain": [
-       "100-element Array{Float64,1}:\n",
+       "100-element Vector{Float64}:\n",
        " 1.0\n",
        " 1.0\n",
        " 1.0\n",
@@ -147,7 +147,7 @@
        " 1.0\n",
        " 1.0\n",
        " 1.0\n",
-       " ⋮  \n",
+       " ⋮\n",
        " 1.0\n",
        " 1.0\n",
        " 1.0\n",
@@ -226,15 +226,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      " 75.332291 seconds (148.44 M allocations: 107.002 GiB, 8.60% gc time)\n"
+      " 87.627891 seconds (147.09 M allocations: 107.447 GiB, 2.79% gc time)\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "Dict{AbstractString,Array{Float64,2}} with 4 entries:\n",
-       "  \"W2\" => [-0.150111 0.516357 … -4.31865e-6 -0.0843425; -0.150111 0.516357 … -4…\n",
-       "  \"B2\" => [-0.150111 0.516357 … -4.31865e-6 -0.0843425]\n",
+       "Dict{AbstractString, Matrix{Float64}} with 4 entries:\n",
+       "  \"W2\" => [-0.0724069 -0.101479 … -0.00120975 -0.0246486; -0.0724069 -0.101479 …\n",
+       "  \"B2\" => [-0.0724069 -0.101479 … -0.00120975 -0.0246486]\n",
        "  \"B1\" => [0.0 0.0 … 0.0 0.0]\n",
        "  \"W1\" => [0.0 0.0 … 0.0 0.0; 0.0 0.0 … 0.0 0.0; … ; 0.0 0.0 … 0.0 0.0; 0.0 0.0…"
       ]
@@ -253,7 +253,7 @@
     "\n",
     "# 勾配計算\n",
     "## @timeマクロで時間計測してみると分かるが、ニューロンの数だけ勾配計算する今の方法では非常に多くの時間がかかる\n",
-    "## => Intel(C) Core i7-7700 3.6 GHz で 60〜80秒程度かかる\n",
+    "## => Intel(C) Core i7-9750H 2.6 GHz で 60〜80秒程度かかる\n",
     "## => この部分の高速化（誤差逆伝搬法）については後述する\n",
     "grad = @time numeric_gradient(net, x, y)"
    ]
@@ -281,14 +281,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      " 82.919140 seconds (149.05 M allocations: 107.032 GiB, 13.88% gc time)\n"
+      "112.009648 seconds (147.65 M allocations: 107.479 GiB, 12.58% gc time, 0.24% compilation time)\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "1-element Array{Any,1}:\n",
-       " 4.916103202232928"
+       "1-element Vector{Any}:\n",
+       " 7.565457600361736"
       ]
      },
      "execution_count": 4,
@@ -311,7 +311,7 @@
     "train_x = Array{Float64,2}(reshape(train_x, :, 784)) # 60000 x 784 Array{Float64,2}\n",
     "\n",
     "# 教師データをone-hot-vector形式に変換\n",
-    "train_y = hcat([[i-1 == y ? 1.0 : 0.0 for i in 1:10] for y in train_y]...)' # 60000 x 10 Array{Float64,2}\n",
+    "train_y = hcat([[i-1 == y ? 1.0 : 0.0 for i in 1:10] for y in train_y]...) |> transpose # 60000 x 10 Array{Float64,2}\n",
     "\n",
     "# 損失関数の履歴\n",
     "train_loss_list = []\n",
@@ -348,8 +348,8 @@
     "end\n",
     "\n",
     "# 学習実行\n",
-    "## iters_num = 1回で 80秒程度かかるため、10,000回実行しようとすると 222時間（≒9日）程度かかる\n",
-    "## (Intel(C) Core i7-7700 3.6 GHz の場合)\n",
+    "## iters_num = 1回で 110秒程度かかるため、10,000回実行しようとすると 305時間（≒13日）程度かかる\n",
+    "## (Intel(C) Core i7-9750H 2.6 GHz の場合)\n",
     "@time train!(net)\n",
     "train_loss_list"
    ]
@@ -364,17 +364,17 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Julia 1.3.0",
+   "display_name": "Julia 1.6.1",
    "language": "julia",
-   "name": "julia-1.3"
+   "name": "julia-1.6"
   },
   "language_info": {
    "file_extension": ".jl",
    "mimetype": "application/julia",
    "name": "julia",
-   "version": "1.3.0"
+   "version": "1.6.1"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
