🍱 add: linear algebra

--- a/02_machine-learning/00_math-basic.ipynb
+++ b/02_machine-learning/00_math-basic.ipynb
@@ -138,18 +138,18 @@
     "    - 数列の $n$ 番目の数を $a_n$ のように表現し、この右下に記述される小さな数を **添字** と呼ぶ\n",
     "- **一般項**:\n",
     "    - $a_n$ を $n$ の式で表現したもの\n",
-    "    - 例えば $a_1 = 2, a_2 = 4, a_3 = 6, a_4 = 8, ...$ のような数列は $a_n = 2n$ という一般項で表される\n",
+    "    - 例えば $a_1 = 2, a_2 = 4, a_3 = 6, a_4 = 8, \\dots$ のような数列は $a_n = 2n$ という一般項で表される\n",
     "\n",
     "数列の和を考える時は、以下のような式で表現する\n",
     "\n",
     "$$\n",
-    "\\sum_{n=1}^{N}{a_n} = a_1 + a_2 + \\ ... \\ + a_N\n",
+    "\\sum_{n=1}^{N}{a_n} = a_1 + a_2 + \\ \\dots \\ + a_N\n",
     "$$\n",
     "\n",
     "同様に、数列の積は以下のように表現される\n",
     "\n",
     "$$\n",
-    "\\prod_{n=1}^{N}{a_n} = a_1 * a_2 * \\ ... \\ * a_N\n",
+    "\\prod_{n=1}^{N}{a_n} = a_1 * a_2 * \\ \\dots \\ * a_N\n",
     "$$\n",
     "\n",
     "数列の和については、以下の公式が成り立つ（証明は省略）\n",
