🍱 add: ガウスの消去法実装

--- a/02_machine-learning/01-02_matrix.ipynb
+++ b/02_machine-learning/01-02_matrix.ipynb
@@ -251,7 +251,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 1,
    "id": "4da855f5-374e-46e4-8b3d-199f33245254",
    "metadata": {},
    "outputs": [
@@ -312,7 +312,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 2,
    "id": "a9646b94-33c6-4d9a-b7c4-ae2ba7b974b3",
    "metadata": {},
    "outputs": [
@@ -419,7 +419,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 3,
    "id": "b49ea7ea-d6a6-42c7-acae-21713333a9f5",
    "metadata": {},
    "outputs": [
@@ -738,7 +738,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 4,
    "id": "f641cd86-1858-4b0a-9086-c84c15032fba",
    "metadata": {},
    "outputs": [
@@ -751,7 +751,7 @@
        " 0//1  0//1  1//1"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -763,7 +763,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 5,
    "id": "f0003c51-3b40-4afd-90ca-afa33fa7ac75",
    "metadata": {},
    "outputs": [
@@ -776,7 +776,7 @@
        " 0  0  1"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -847,9 +847,160 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "b4793e7b-428c-43c2-8e62-ca36a834fbcd",
+   "metadata": {},
+   "source": [
+    "### 前進消去と後退代入\n",
+    "前述のように、行基本操作（行基本変形）を用いてある行列を単位行列に変形することで、その行列の逆行列を求めることが出来る\n",
+    "\n",
+    "逆行列を求めることができれば、自動的に連立1次方程式を解くことも可能であり、このようなアルゴリズムを **ガウスの消去法** もしくは **掃き出し法** と呼ぶ\n",
+    "\n",
+    "ガウスの消去法は **前進消去** と **後退代入** という2つのステップから構成されている\n",
+    "\n",
+    "- **前進消去**:\n",
+    "    - **拡大係数行列** に対して行基本操作（行基本変形）を行い、係数行列の対角成分を 1 に、下三角を 0 に変形し、**階段行列** を作ること\n",
+    "    - ![gauss_matrix.drawio.png](./img/gauss_matrix.drawio.png)\n",
+    "- **後退代入**:\n",
+    "    - 連立1次方程式の求解部分のこと\n",
+    "    - 前進消去により求められた階段行列において、最下段の自明な解からドミノ倒し的に解を求めていく\n",
+    "    - ![gauss_backward_base.drawio.png](./img/gauss_backward_base.drawio.png)\n",
+    "\n",
+    "ガウスの消去法は機械的に連立1次方程式を解くことが出来るため、コンピュータシミュレーションの分野では基本の手法となっている\n",
+    "\n",
+    "#### 前進消去の実装\n",
+    "前進消去は以下のアルゴリズムで処理することが出来る\n",
+    "\n",
+    "1. 1行目1列目（$a_11$）を **ピボット** と呼ばれる成分として選択する\n",
+    "2. ピボット成分のある行をピボット値で割り、ピボット値が 1 になるように変形する\n",
+    "3. 2行目以降について、ピボット成分のある列（$a_11$ がピボットの場合は 1 列目）が 0 になるように、ピボット成分のある行（$a_11$ がピボットの場合は 1 行目）を定数倍して加算する\n",
+    "4. ピボット成分を +1 行, +1 列ずらして新たなピボットとして選択する\n",
+    "5. 新しいピボット成分に対して 2～4 の操作を繰り返し、最後の行まで処理する\n",
+    "\n",
+    "![gauss_forward.drawio.png](./img/gauss_forward.drawio.png)\n",
+    "\n",
+    "#### 後退代入の実装\n",
+    "階段行列の最下段は係数行列の左側が全て0、右端が1になっている\n",
+    "\n",
+    "その更に右隣は定数項であるため、既に解が得られている段となる（自明の解）\n",
+    "\n",
+    "最下段の解がわかれば、その1つ上の段の未知数も計算可能になるため、以下の図のようにドミノ倒し的に解を求めることができる\n",
+    "\n",
+    "![gauss_backward.drawio.png](./img/gauss_backward.drawio.png)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "5341e824-539f-4cf4-aeda-6e94a60fda0c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "gauss_eliminate"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "\"\"\"\n",
+    "ガウスの消去法\n",
+    "\n",
+    "@params\n",
+    "- A::Matrix{T} 係数行列\n",
+    "- b::Vector{T} 定数ベクトル\n",
+    "\n",
+    "@keys\n",
+    "- debug::Boolean デバッグ出力するかどうか\n",
+    "\n",
+    "@returns\n",
+    "- x::Vector{T} 解ベクトル\n",
+    "\"\"\"\n",
+    "gauss_eliminate = (A, b; debug = false) -> begin\n",
+    "    # 拡大係数行列: 係数行列と定数ベクトルを横に結合\n",
+    "    mat = Rational.(hcat(A, b)) # 有理数計算できるように Matrix{Complex} 型とする\n",
+    "    n = size(mat)[1] # 拡大係数行列の行数\n",
+    "    \n",
+    "    # 前進消去\n",
+    "    for i = 1:n # 1行目からn行目までループ処理\n",
+    "        pivot = mat[i, i] # a_ii: ピボットとして選択\n",
+    "        mat[i, :] = mat[i, :] // pivot # i行目: ピボット値で割る（ピボット値を 1 にする）\n",
+    "        \n",
+    "        # 1行目の定数倍を i+1 行目から n 行目まで加算\n",
+    "        for j = i+1 : n\n",
+    "            mat[j, :] = mat[j, :] - mat[j, i] .* mat[i, :] # i列目の値が 0 になるように i行目を定数倍して加算（減産）\n",
+    "        end\n",
+    "    end\n",
+    "    \n",
+    "    # 前進消去後の拡大係数行列を確認\n",
+    "    if debug\n",
+    "        display(mat)\n",
+    "    end\n",
+    "    \n",
+    "    # 後退代入\n",
+    "    x = zeros(Float64, n) # n次元 解ベクトル\n",
+    "    A, b = mat[:, 1:end-1], mat[:, end] # 拡大係数行列を係数行列と定数ベクトルに再分離\n",
+    "    for i = n:-1:1 # 最終行から解を求めていく\n",
+    "        x[i] = b[i] # 自明の解\n",
+    "        for j = 1:i\n",
+    "            b[j] = b[j] - A[j, i] * x[i] # 解が決まった列分、定数ベクトルの値を更新\n",
+    "        end\n",
+    "    end\n",
+    "    \n",
+    "    return x\n",
+    "end"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "8d2d2ad1-0061-4e73-9ca6-8859fe66c0b4",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "4×5 Matrix{Rational{Int64}}:\n",
+       " 1//1  1//2  3//2    2//1   1//1\n",
+       " 0//1  1//1  1//1   -8//1  18//1\n",
+       " 0//1  0//1  1//1  -13//6  22//3\n",
+       " 0//1  0//1  0//1    1//1  -2//1"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "4-element Vector{Float64}:\n",
+       "  1.0\n",
+       " -1.0\n",
+       "  3.0\n",
+       " -2.0"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# 例で挙げていた連立1次方程式を実際に解いてみる\n",
+    "A = [2 1 3 4; 3 2 5 2; 3 4 1 -1; -1 -3 1 3]\n",
+    "b = [2; 12; 4; -1]\n",
+    "\n",
+    "gauss_eliminate(A, b; debug=true)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "636349c7-48d3-4fbd-ad4c-d95bd7d7a9cf",
+   "id": "d2a3c1b2-a1cf-4348-8dd1-31e3a33a67b6",
    "metadata": {},
    "outputs": [],
    "source": []
