--- a/01_tutorial/01_Julia_calculation.ipynb
+++ b/01_tutorial/01_Julia_calculation.ipynb
@@ -88,9 +88,7 @@
     "- `_`, `!`, ...等の記号\n",
     "- Unicode文字\n",
     "\n",
-    "ただし、ビルトインステートメントの名前（`if`, `else`, ...等）を変数名として使用することはできない\n",
-    "\n",
-    "また、`+`, `-` 等の演算子記号も変数名として定義されてはいるが、再割り当てを行うことはできない"
+    "ただし、ビルトインステートメントの名前（`if`, `else`, ...等）を変数名として使用することはできない"
    ]
   },
   {
@@ -143,34 +141,6 @@
    ],
    "source": [
     "try = \"No\""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "LoadError",
-     "evalue": "cannot assign a value to variable Base.+ from module Main",
-     "output_type": "error",
-     "traceback": [
-      "cannot assign a value to variable Base.+ from module Main",
-      "",
-      "Stacktrace:",
-      " [1] top-level scope",
-      "   @ In[6]:1",
-      " [2] eval",
-      "   @ .\\boot.jl:360 [inlined]",
-      " [3] include_string(mapexpr::typeof(REPL.softscope), mod::Module, code::String, filename::String)",
-      "   @ Base .\\loading.jl:1094"
-     ]
-    }
-   ],
-   "source": [
-    "(+) = function (a, b)\n",
-    "    return a - b\n",
-    "end"
    ]
   },
   {
